# clipz

./: .gitignore  BUILD.md  CLAUDE.md  Cargo.toml  INTEGRATION.md  README.md  build.zig  build.zig.zon
.github/workflows/: release.yml
.zig-cache/o/1aad1ce7a1ed0bb93f6c99d1dfe3a5b9/: clipz
.zig-cache/o/41611c11744249ec2a86018c0db4be13/: clipz
.zig-cache/o/543a94fdcb5304e9292d8865bd4d24aa/: build
.zig-cache/o/5cca1a779dd2d91974bb77b2aca328c8/: clipz
.zig-cache/o/6386df572ac0552a08cbb7627455402d/: clipz
.zig-cache/o/936664190162f8dc34dae41f10daa97c/: clipz
.zig-cache/o/cd514a1d4cfc31937440715149fb0f1f/: clipz
.zig-cache/o/e77f11cab1fb8789d4c498559a611b84/: clipz
Casks/: clipz.rb
Clipz.app/Contents/: Info.plist
Clipz.app/Contents/_CodeSignature/: CodeResources
electron-frontend/: index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  styles.css
electron-frontend/scripts/: build-native.js
gpui-app/: AppIcon.icns  Cargo.toml  Info.plist
gpui-app/src/: main.rs
scripts/: build-app.sh
src/: clipboard.zig  command.zig  config.zig  image_storage.zig  main.zig  manager.zig  pasteboard.zig  persistence.zig  ui.zig
