[package]
name = "clipz-gpui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui" }
global-hotkey = "0.7.0"
cocoa = "0.25"
objc = "0.2"
